--- a/wisdomCampus/html/new_message.html
+++ b/wisdomCampus/html/new_message.html
@@ -142,6 +142,7 @@
 		<script src='../js/utils/signHmacSHA1.js'></script>
 
 		<script type="text/javascript">
+			var newData = store.get(window.storageKeyName.NEWDETAIL);
 			var uptokenData;
 			var qnFileUploader; //七牛上传控件对象
 			initQNUploader();
@@ -149,18 +150,18 @@
 				el: '#message',
 				data: {
 
-					title: '',
-					content: '',
-					smsSync: false,
+					title: newData.title,
+					content: newData.content,
+					smsSync: newData.smsSync,
 					displayGallery: {
 						display: 'none'
 					},
 					displayAddBtn: {
 						display: 'block'
 					},
-					selectIndex: 0,
-					selectImgPath: '',
-					uploadedFiles: []
+					selectIndex: newData.selectIndex,
+					selectImgPath: newData.selectImgPath,
+					uploadedFiles: newData.uploadedFiles
 				},
 				methods: {
 					selectFile: function(event) { //从手机中选择图片后到界面的回调
@@ -408,9 +409,17 @@
 				var smsSync = message.smsSync == true ? 1 : 0
 				$.showLoading('加载中...');
 				var personal = store.get(window.storageKeyName.PERSONALINFO);
+				var selectPeople_arr = newData.selectPeople;
 				var ids = [];
 				var codes = [];
 				var names = [];
+				for(var i=0;i<selectPeople_arr.length;i++){
+					var model = selectPeople_arr[i];
+					ids.push(model.utid)
+					codes.push('')
+					names.push(model.utname)
+				}
+				
 				var tempData = {
 					schoolId: storageKeyName.SCHOOLID, //学校ID
 					noticeTitle: message.title, //标题
