--- a/wisdomCampus/html/new-check.html
+++ b/wisdomCampus/html/new-check.html
@@ -95,27 +95,25 @@
 				</div>
 			</div>
 			<div class="weui-cells">
-				<div class="weui-cell weui-cell_access">
+				<div class="weui-cell">
+					<div class="weui-cell__hd"><label class="weui-label">审批流程</label></div>
 					<div class="weui-cell__bd">
-						审批流程
-					</div>
-					<div class="weui-cell__ft">
-						点击选择审批流程
+						<input id="workFlow" data_id="" onclick="selectWorkFlow(this)" class="weui-input" placeholder="点击选择审批流程">
 					</div>
 				</div>
 				<div class="weui-cell" style="align-items: flex-start;">
 					<div class="weui-cell__hd" style="margin-right: 18px;">顺序审批人</div>
 					<div class="weui-cell__bd">
 						<ol>
-							<li style="margin-top: 10px;"><span style="border: solid 1px darkgray;padding: 7px 5px 5px;">徐浩然</span></li>
-							<li @click="selectPepole()" style="margin-top: 10px;"><span style="border: solid 1px darkgray;padding: 7px 5px 5px;">徐浩然</span><span style="border: solid 1px #3C9BFE;color: #3C9BFE;margin-left: 10px; padding: 7px 5px 5px;">选择审批人</span></li>
+							<li v-if="workFlow.length>0" v-for="(item,index) in flowMan_arr" style="margin-top: 10px;"><span style="border: solid 1px darkgray;padding: 7px 5px 5px;">{{item.ManName}}</span></li>
+							<li @click="selectPepole()" style="margin-top: 10px;"><span style="border: solid 1px #3C9BFE;color: #3C9BFE; padding: 7px 5px 5px;">选择审批人</span></li>
 						</ol>
 					</div>
 				</div>
 			</div>
 
 			<a @click="clickSubmitBtn()" href="#" class="weui-btn weui-btn_blue">发布</a>
-			<div class="weui-gallery" :style="displayGallery"  style="z-index: 999999;position:absolute;">
+			<div class="weui-gallery" :style="displayGallery" style="z-index: 999999;position:absolute;">
 				<span class="weui-gallery__img" @click="clickGigImg" :style="{backgroundImage:'url('+selectImgPath+')'}"></span>
 				<div class="weui-gallery__opr">
 					<a href="javascript:" class="weui-gallery__del">
@@ -131,6 +129,7 @@
 		<script src='../js/lib/vconsole/vconsole.min.js'></script>
 		<script src="../js/demoCssJs/jquery-weui.js"></script>
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/weui.min.js"></script>
 		<script src="../js/lib/exif/exif.min.js"></script>
 		<script src="../js/utils/compress.js"></script>
 		<script src="../js/utils/utils.js"></script>
@@ -146,13 +145,15 @@
 		<script src='../js/utils/signHmacSHA1.js'></script>
 
 		<script type="text/javascript">
+			getSelWorkFlow();
 			var uptokenData;
 			var qnFileUploader; //七牛上传控件对象
 			initQNUploader();
 			var message = new Vue({
 				el: '#message',
 				data: {
-
+					workFlow: [],
+					flowMan_arr: [],
 					title: '',
 					content: '',
 					smsSync: false,
@@ -414,6 +415,13 @@
 				var ids = [];
 				var codes = [];
 				var names = [];
+				for(var i=0;i<message.flowMan_arr.length;i++){
+					var model = message.flowMan_arr[i];
+					ids.push(model.ManId)
+					codes.push("")
+					names.push(model.ManName)
+				}
+				
 				var tempData = {
 					schoolId: storageKeyName.SCHOOLID, //学校ID
 					applyTitle: message.title, //标题
@@ -433,6 +441,65 @@
 						$.hideLoading();
 					} else {
 
+					}
+				});
+			}
+
+			function getSelWorkFlow() {
+				var personal = store.get(window.storageKeyName.PERSONALINFO);
+
+				var tempData = {
+					schoolId: storageKeyName.SCHOOLID, //学校ID
+
+				}
+				getSelWorkFlowPro(tempData, function function_name(data) {
+					console.log(JSON.stringify(data))
+					if(data.RspCode == 0) {
+						message.workFlow = data.RspData.Data
+						for(var i = 0; i < message.workFlow.length; i++) {
+
+							var model = message.workFlow[i]
+							model.label = model.FlowName;
+							model.value = model.WorkFlowId;
+						}
+					} else {
+
+					}
+				});
+			}
+
+			function getWorkFlowListById(workFlowId) {
+
+				var tempData = {
+					workFlowId: workFlowId, //学校ID
+
+				}
+				getWorkFlowListByIdPro(tempData, function function_name(data) {
+					console.log(JSON.stringify(data))
+					if(data.RspCode == 0) {
+						message.flowMan_arr = data.RspData.Data;
+
+					} else {
+
+					}
+				});
+			}
+
+			function selectWorkFlow(input_item) {
+				document.activeElement.blur();
+				var self = input_item;
+				//		if(message.workFlow==undefined||message.workFlow.length==0){
+				//			alert("暂无部门")
+				//		}
+
+				weui.picker(message.workFlow, {
+					onChange: function(result) {
+						//						console.log(result);
+					},
+					onConfirm: function(result) {
+						document.getElementById("workFlow").value = result[0].label;
+						document.getElementById("workFlow").data_id = result[0].value;
+						getWorkFlowListById(result[0].value);
 					}
 				});
 			}
