审批本地存储

--- a/wisdomCampus/html/all.html
+++ b/wisdomCampus/html/all.html
@@ -243,7 +243,10 @@
 					selectIndex: 0,
 					selectImgPath: '',
 					uploadedFiles: [],
-					selectPeople: []
+					selectPeople: [],
+					flowName:"",
+					flowId:"",
+					flowMan_arr:[],
 
 				}
 
