--- a/wisdomCampus/html/new-check.html
+++ b/wisdomCampus/html/new-check.html
@@ -55,6 +55,7 @@
 			<a class="mui-icon mui-pull-right right-cancel">取消</a>
 		</header>
 		<div id="message" class="mui-content">
+		
 			<div class="weui-cells">
 				<div class="weui-cell">
 					<div class="weui-cell__hd">标题</div>
@@ -98,14 +99,14 @@
 				<div class="weui-cell">
 					<div class="weui-cell__hd"><label class="weui-label">审批流程</label></div>
 					<div class="weui-cell__bd">
-						<input id="workFlow" data_id="" onclick="selectWorkFlow(this)" class="weui-input" placeholder="点击选择审批流程">
+						<input id="workFlow" :data_id="flowId" onclick="selectWorkFlow(this)" class="weui-input" placeholder="点击选择审批流程" v-model="flowName">
 					</div>
 				</div>
 				<div class="weui-cell" style="align-items: flex-start;">
 					<div class="weui-cell__hd" style="margin-right: 18px;">顺序审批人</div>
 					<div class="weui-cell__bd">
 						<ol>
-							<li v-if="workFlow.length>0" v-for="(item,index) in flowMan_arr" style="margin-top: 10px;"><span style="border: solid 1px darkgray;padding: 7px 5px 5px;">{{item.ManName}}</span></li>
+							<li v-if="workFlow.length>0" v-for="(item,index) in flowMan_arr" style="margin-top: 10px;"><span style="border: solid 1px darkgray;padding: 7px 5px 5px;">{{item.ManName}}</span><a><span @click="delPeople(index)" class="mui-icon mui-icon-trash mui-pull-right" style="color: gray;"></span></a></li>
 							<li @click="selectPepole()" style="margin-top: 10px;"><span style="border: solid 1px #3C9BFE;color: #3C9BFE; padding: 7px 5px 5px;">选择审批人</span></li>
 						</ol>
 					</div>
@@ -145,6 +146,9 @@
 		<script src='../js/utils/signHmacSHA1.js'></script>
 
 		<script type="text/javascript">
+			var newData = store.get(window.storageKeyName.NEWDETAIL);
+			console.log('newData:', JSON.stringify(newData));
+			var flowMan_arr = newData.flowMan_arr.concat(newData.selectPeople);
 			getSelWorkFlow();
 			var uptokenData;
 			var qnFileUploader; //七牛上传控件对象
@@ -152,20 +156,23 @@
 			var message = new Vue({
 				el: '#message',
 				data: {
+					flowName: newData.flowName,
+					flowId: newData.flowId,
 					workFlow: [],
-					flowMan_arr: [],
-					title: '',
-					content: '',
-					smsSync: false,
+					flowMan_arr: flowMan_arr,
+					title: newData.title,
+					content: newData.content,
+					smsSync: newData.smsSync,
 					displayGallery: {
 						display: 'none'
 					},
 					displayAddBtn: {
 						display: 'block'
 					},
-					selectIndex: 0,
-					selectImgPath: '',
-					uploadedFiles: []
+					selectIndex: newData.selectIndex,
+					selectImgPath: newData.selectImgPath,
+					uploadedFiles: newData.uploadedFiles,
+					selectPeople:newData.selectPeople
 				},
 				methods: {
 					selectFile: function(event) { //从手机中选择图片后到界面的回调
@@ -207,7 +214,26 @@
 						addAffairApply()
 
 					},
+					delPeople:function(index) {
+						message.flowMan_arr.splice(index, 1);
+					},
 					selectPepole: function() {
+
+						var tempData = {
+							title: message.title,
+							content: message.content,
+							smsSync: message.smsSync,
+							selectIndex: message.selectIndex,
+							selectImgPath: message.selectImgPath,
+							uploadedFiles: message.uploadedFiles,
+							selectPeople: newData.selectPeople,
+							flowName: message.flowName,
+							flowId: message.flowId,
+							flowMan_arr: message.flowMan_arr,
+
+						}
+						store.set(window.storageKeyName.NEWDETAIL, tempData);
+
 						var data = {
 							flag: 2 //事务及文件
 						}
@@ -415,13 +441,13 @@
 				var ids = [];
 				var codes = [];
 				var names = [];
-				for(var i=0;i<message.flowMan_arr.length;i++){
+				for(var i = 0; i < message.flowMan_arr.length; i++) {
 					var model = message.flowMan_arr[i];
 					ids.push(model.ManId)
 					codes.push("")
 					names.push(model.ManName)
 				}
-				
+
 				var tempData = {
 					schoolId: storageKeyName.SCHOOLID, //学校ID
 					applyTitle: message.title, //标题
@@ -497,8 +523,10 @@
 						//						console.log(result);
 					},
 					onConfirm: function(result) {
-						document.getElementById("workFlow").value = result[0].label;
-						document.getElementById("workFlow").data_id = result[0].value;
+						//						document.getElementById("workFlow").value = result[0].label;
+						//						document.getElementById("workFlow").data_id = result[0].value;
+						message.flowName = result[0].label;
+						message.flowId = result[0].value;
 						getWorkFlowListById(result[0].value);
 					}
 				});
